language-server/src/tests/snapshots/gleam_language_server__tests__completion__no_variable_completions_after_case_clause_scope.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  case todo {\n    something -> Nil\n    something_else -> s\n  }\n  s\n}\n"
---

pub fn main() {
  case todo {
    something -> Nil
    something_else -> s|
  }
  s
}


----- Completion content -----
Nil
  kind:   EnumMember
  detail: gleam
  sort:   05_Nil
main
  kind:   Function
  detail: fn() -> a
  sort:   3_main
  desc:   app
  edits:
    [4:22-4:23]: "main"
something_else
  kind:   Variable
  detail: a
  sort:   03_something_else
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [4:22-4:23]: "something_else"
