language-server/src/tests/snapshots/gleam_language_server__tests__completion__no_variable_completions_after_case_scope.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  case todo {\n    something -> Nil\n  }\n  s\n}\n"
---

pub fn main() {
  case todo {
    something -> Nil
  }
  s|
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
main
  kind:   Function
  detail: fn() -> a
  sort:   3_main
  desc:   app
  edits:
    [5:2-5:3]: "main"
