language-server/src/tests/snapshots/gleam_language_server__tests__completion__no_variable_completions_before_case_clause.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  case todo {\n    something -> s\n    something_else -> Nil\n  }\n  s\n}\n"
---

pub fn main() {
  case todo {
    something -> s|
    something_else -> Nil
  }
  s
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   05_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
main
  kind:   Function
  detail: fn() -> a
  sort:   3_main
  desc:   app
  edits:
    [3:17-3:18]: "main"
something
  kind:   Variable
  detail: a
  sort:   03_something
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:17-3:18]: "something"
