language-server/src/tests/snapshots/gleam_language_server__tests__completion__no_variable_completions_before_declaration_in_block.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  {\n    s\n    let something = 10\n  }\n}\n"
---

pub fn main() {
  {
    s|
    let something = 10
  }
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
main
  kind:   Function
  detail: fn() -> Int
  sort:   3_main
  desc:   app
  edits:
    [3:4-3:5]: "main"
