language-server/src/tests/snapshots/gleam_language_server__tests__completion__opaque_type.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub opaque type Wibble {\n  Wobble\n}\n"
---
|
pub opaque type Wibble {
  Wobble
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
Wobble
  kind:   EnumMember
  detail: Wibble
  sort:   3_Wobble
  desc:   app
  edits:
    [1:0-1:0]: "Wobble"
