language-server/src/tests/snapshots/gleam_language_server__tests__completion__prefer_values_matching_expected_type.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() -> Bool {\n  let wibble = 123\n  let wubble = True\n  let Wobble = 1.5\n  w\n}\n"
---

pub fn main() -> Bool {
  let wibble = 123
  let wubble = True
  let Wobble = 1.5
  w|
}


----- Completion content -----
False
  kind:   EnumMember
  detail: gleam
  sort:   05_False
True
  kind:   EnumMember
  detail: gleam
  sort:   05_True
main
  kind:   Function
  detail: fn() -> Bool
  sort:   03_main
  desc:   app
  edits:
    [5:2-5:3]: "main"
wibble
  kind:   Variable
  detail: Int
  sort:   3_wibble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [5:2-5:3]: "wibble"
wubble
  kind:   Variable
  detail: Bool
  sort:   03_wubble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [5:2-5:3]: "wubble"
