language-server/src/tests/snapshots/gleam_language_server__tests__completion__private_function.snap
---
source: language-server/src/tests/completion.rs
expression: "\nfn private() {\n  1\n}\n"
---
|
fn private() {
  1
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
private
  kind:   Function
  detail: fn() -> Int
  sort:   3_private
  desc:   app
  edits:
    [1:0-1:0]: "private"
