language-server/src/tests/snapshots/gleam_language_server__tests__completion__private_function_in_dep.snap
---
source: language-server/src/tests/completion.rs
expression: import dep
---
|import dep


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
